# materia-epd

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CODE_REVIEW_2026-04-17.md  DEVELOP.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: authors.md  changelog.md  conf.py  index.md  index.rst  license.md  pipeline_explanation.md  pipeline_explanation.rst  requirements.txt
src/materia_epd/: __init__.py  __main__.py  _version.py  cli.py  logging_utils.py  resources.py
src/materia_epd/core/: constants.py  physics.py  utils.py
src/materia_epd/data/locations/: ABW.json  AFG.json  AGO.json  AIA.json  ALA.json  ALB.json  AND.json  ARE.json  ARG.json  ARM.json  ASM.json  ATF.json  ATG.json  AUS.json  AUT.json  AZE.json  Africa.json  Americas.json  Asia.json  Australia and New Zealand.json  BDI.json  BEL.json  BEN.json  BES.json  BFA.json  BGD.json  BGR.json  BHR.json  BHS.json  BIH.json  BLM.json  BLR.json  BLZ.json  BMU.json  BOL.json  BRA.json  BRB.json  BRN.json  BTN.json  BVT.json  (+237 more)
src/materia_epd/data/market_shares/LUX/: 0201.json  0301.json  1214.json  2505.json  2508.json  2515.json  2516.json  2517.json  2523.json  2619.json  2713.json  2715.json  3102.json  3208.json  3209.json  3801.json  3816.json  3824.json  3827.json  3901.json  3906.json  3907.json  3909.json  3910.json  3916.json  3917.json  3918.json  3921.json  3922.json  3925.json  3926.json  4002.json  4005.json  4008.json  4016.json  4401.json  4407.json  4409.json  4410.json  4411.json  (+101 more)
src/materia_epd/data/national_production/LUX/: 7216.json  7301.json
src/materia_epd/epd/: cache.py  extract.py  extraction_errors.py  filters.py  generators.py  models.py  pipeline.py  report.py
src/materia_epd/geo/: locations.py
src/materia_epd/market/: market.py  test.py  update_shares.py
src/materia_epd/metrics/: averaging.py
src/materia_epd/pipeline/: context.py  pipeline.py  recipes.py  report.py  run.py  stages.py
tests/: conftest.py
tests/unit/: test_averaging.py  test_cli.py  test_constants.py  test_epd_cache.py  test_filters.py  test_locations.py  test_market.py  test_models.py  test_pipeline.py  test_pipeline_assembled.py  test_pipeline_mass_validation.py  test_pipeline_transport.py  test_report.py  test_resources.py
