[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materia-epd"
dynamic = ["version"]
description = "Aggregate and normalize Environmental Product Declaration (EPD) datasets."
authors = [
    { name = "pbaustert" },
    { name = "tngTUDOR" },
    { name = "glarreag" },
    { name = "killileg" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
keywords = [
    "epd",
    "ilcd",
    "lca",
    "life-cycle-assessment",
    "environmental-product-declaration",
    "sustainability",
]
dependencies = [
    "click",
    "numpy",
    "pandas",
    "pycountry",
    "comtradeapicall",
    "rich>=14.3.2",
    "structlog>=25.5.0",
    "matplotlib",
    "reportlab",
]
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
materia-epd = "materia_epd.cli:main"

[project.urls]
Homepage = "https://github.com/pbaustert/materia-epd"
Documentation = "https://materia-epd.readthedocs.io/en/latest/"
Repository = "https://github.com/pbaustert/materia-epd"
Issues = "https://github.com/pbaustert/materia-epd/issues"
Changelog = "https://materia-epd.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "flake8==6.1.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pre-commit==3.4.0",
    "deptry",
    "coverage-badge",
    "sphinx",
    "setuptools>=82.0.0",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"
write_to = "src/materia_epd/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["materia_epd*"]
where = ["src"]

[tool.setuptools.package-data]
"materia_epd.data" = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "--cov=materia_epd --cov-report=term-missing --cov-fail-under=50"
testpaths = ["tests"]

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]
extend_exclude = ["docs"]

[tool.deptry.per_rule_ignores]
DEP003 = ["materia_epd"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
